The height of the bars div element is now using window.innerHeight instead of 100vh. This fixes issues on mobile devices.

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,6 @@ main {
 .bars {
   margin: 0 auto;
   width: 100%;
-  height: calc(100vh - 4rem - 50px);
   display: flex;
   gap: 1px;
 }
